# science-platform

./: .gitignore  .pre-commit-config.yaml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: cd.edge.build.yml  cd.release.build.yml  cd.release.yml  checks.yaml  ci.commit.check.yml  ci.linting.yml  ci.testing.yml  codeql.yml  commit-check.yaml  continous-integration.yaml  scorecard.yml
deployment/: README.md
deployment/helm/: README.md
deployment/helm/base/: Chart.yaml  README.md  README.md.gotmpl  dev.overrides.yaml  values.yaml
deployment/helm/base/templates/: NOTES.txt  developer-storage.yaml  server-secrets.yaml
deployment/helm/base/templates/tests/: test-namespaces.yaml
deployment/helm/base/volumes/hostPath/: persistent-volume-service.yaml
deployment/helm/cavern/: README.md  dev.overrides.yaml  values.yaml
deployment/helm/cavern/config/: cadc-log.properties  cadc-registry.properties
deployment/helm/cavern/templates/: cavern-tomcat-expose.yaml  postgres-config.yaml  postgres-service.yaml
deployment/helm/kueue/: values.yaml
deployment/helm/posix-mapper/: CHANGELOG.md  README.md  dev.overrides.yaml  values.yaml
deployment/helm/posix-mapper/config/: cadc-registry.properties  posix-mapper.properties
deployment/helm/posix-mapper/templates/: posix-mapper-tomcat-deployment.yaml  posix-mapper-tomcat-expose.yaml  postgres-config.yaml  postgres-service.yaml
deployment/helm/registry/: README.md  values.yaml
deployment/helm/registry/static/configs/: applications  capabilities
deployment/helm/registry/templates/: NOTES.txt  configmap.yaml  deployment.yaml  expose.yaml  ingress.yaml
deployment/helm/science-portal/: README.md  values.yaml
deployment/helm/science-portal/config/: cadc-log.properties  cadc-registry.properties  catalina.properties
deployment/helm/science-portal/templates/: science-portal-config-configmap.yaml  science-portal-tomcat-deployment.yaml  science-portal-tomcat-expose.yaml
deployment/helm/skaha/: README.md  sample-local-values.yaml  values.yaml
deployment/helm/skaha/config/: cadc-registry.properties
deployment/helm/skaha/desktop-template/: start-software-sh.template
deployment/helm/skaha/skaha-config/: launch-desktop.yaml
deployment/helm/skaha/templates/: _helpers.tpl  session-volumes-mounts.yaml  session-volumes.yaml  skaha-cluster-queues.yaml  skaha-local-queues.yaml  skaha-resource-flavors.yaml  skaha-tomcat-deployment.yaml  skaha-tomcat-expose.yaml
deployment/helm/storage-ui/: CHANGELOG.md  values.yaml
deployment/helm/storage-ui/config/: cadc-log.properties  catalina.properties
deployment/helm/storage-ui/templates/: storage-ui-tomcat-deployment.yaml  storage-ui-tomcat-expose.yaml
deployment/helm/utils/: README.md
deployment/k8s-config/harbor/canfar/: create-tls-secret.sh  uninstall-harbor.sh  values-keel-dev.yaml  values-keel-prod.yaml
deployment/k8s-config/harbor/opencadc/: README.md  values-opencadc-prod.yaml
deployment/k8s-config/kustomize/base/arc/: README.md
deployment/k8s-config/kustomize/base/skaha/: README.md
deployment/k8s-config/kustomize/base/skaha-workload/config/templates/: start-software-sh.template
deployment/k8s-config/kustomize/base/skaha/config/: launch-carta.yaml  launch-desktop-app.yaml  launch-desktop.yaml  launch-notebook.yaml
deployment/k8s-config/kustomize/base/sshd/: arc-sshd-ingress.yaml
deployment/k8s-config/kustomize/base/sshd/config/: sshd_config
deployment/k8s-config/kustomize/base/sssd/: sssd-daemonset.yaml
deployment/k8s-config/kustomize/overlays/keel-dev/arc/config/: cavern.properties
deployment/k8s-config/kustomize/overlays/keel-dev/skaha/config/: launch-carta.yaml  launch-desktop-app.yaml  launch-desktop.yaml  launch-headless.yaml  launch-notebook.yaml
deployment/k8s-config/monitoring/: README.md  values-loki.yaml
deployment/k8s-config/monitoring/stats-scripts/: keel-stats.sh  node-stats.sh  user-plot.sh  user-stats.sh
deployment/k8s-config/scripts/: deadline.sh  harbor-backup.sh  harbor-restore.sh  log-stats.sh
deployment/ops-containers/add-project/: Dockerfile
integration-test/: README.md  data.sql  destroy.sh  docker-compose.yaml  init-postgres.sql  run.sh  settings.gradle  setup.sh
integration-test/configs/iam/: keystore.jwks
integration-test/configs/skaha/: cadc-registry.properties  catalina.properties
integration-test/src/test/resources/: test-config.yaml
sidecars/carta/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.controller  README.md  app.py  config.json  docker-compose.yml  pyproject.toml
sidecars/carta/dev/: intercept.py  interceptor.tmpl.yaml
sidecars/carta/k8s/: README.md  carta-controller.yaml  carta-sidecar.yaml  carta-skaha-system-sidecar.yaml  deployment.yaml  service.yaml  slicer-middleware.yaml  traefik-middleware.yaml
sidecars/carta/src/carta/: __init__.py  app.py  backend.py  cli.py  fastapi_app.py
sidecars/carta/src/carta/dev/: __init__.py  intercept.py  interceptor.tmpl.yaml
skaha/: CHANGELOG.md  Dockerfile  opencadc.gradle  version.yaml
skaha/docker/: Dockerfile-Dev
skaha/skaha/: CHANGELOG.md
skaha/src/main/java/org/opencadc/skaha/: K8SUtil.java  SkahaAction.java
skaha/src/main/java/org/opencadc/skaha/context/: GetAction.java  ResourceContexts.java
skaha/src/main/java/org/opencadc/skaha/image/: GetAction.java  Image.java
skaha/src/main/java/org/opencadc/skaha/session/: DeleteAction.java  GetAction.java  PublicSession.java  ResourceStats.java  Session.java
skaha/src/main/webapp/: capabilities.xml  service.yaml
skaha/src/main/webapp/WEB-INF/: web.xml
skaha/src/test/java/org/opencadc/skaha/image/: GetImagesTests.java
skaha/src/test/java/org/opencadc/skaha/session/: GetActionTests.java  GetSessionsTests.java
