[project]
name = "carta-auth-sidecar"
version = "0.1.0"
description = "ForwardAuth service for CARTA sessions resolving user IDs via Kubernetes labels"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Science Platform" }]
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "cachetools>=5.3",
  "kubernetes>=29.0",
]

[tool.uv]
dev-dependencies = []
package = true

[project.scripts]
carta-sidecar = "carta.cli:main"
carta-intercept = "carta.dev.intercept:main"

[tool.uv.sources]
carta = { path = "src" }
